* Massive overhaul of the test suite. What's especially important about
  this is it lays plans for each type which FromEnv should instantiate.

---

* Created the Slot type which expands upon the idea that we reference
  environment variables by names with information about default values 
  or documentation.

  * Provides a lensy interface for building slots.

---

* Added the parsing of Heroku-style database connections

---

* Added a class of environment parseable values which Env.get tries to 
  deserialize to.
  * Includes String, ByteString, and Text 
  * Includes many numeric types
  * Includes Haskell values (parse with 'read')
  * Includes JSON values (parse with 'json')

---

* Generalized the error conditions on parser failure to include a parsing error
  This is there things get interesting!

---

* Changed the basic Env.get to work over ByteStrings instead of Strings
  * We'll eventually get basic String behavior back again, but we drop it
    for a bit so that we can build faster parsers
  * Reimplemented Example and Spec to use this new format

---

* Added a convenience destructor collMay for converting Maybes to Collects.
  * Used this to simplify implementation of both Env.parse and Env.test.

---

* Quickly implemented a mock interpreter for testing using the new
  free applicative interpreter mode.

---

* Vastly simplified the free applicative interpreters of Env.parse and 
  Env.deps by using FreeA's raise and some well-chosen basic Applicatives
  * Included two basic applicatives 
    * Collect --- the "purely applicative sum"
    * Compose --- right-to-left functor composition

---

* Reimplemented the Parser using the free applicative interface.
  This moves around a bunch of code but shouldn't change the ultimate 
  package API or any of the behavior.
* Changed the public S.E.Parser interface to just re-export an internal one,
  hiding some details.

---

* Added a local module implementing free applicatives so as to